[feat](authentication): add fe-authentication modules (api/spi/handler/plugins)